Update environment file to include UNET3+

--- a/environment.yml
+++ b/environment.yml
@@ -15,3 +15,4 @@ dependencies:
     - pip
         - tensorflow
         - netcdf4
+        - git+https://github.com/yingkaisha/keras-unet-collection.git
