--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
     - anaconda
     - conda-forge/label/broken
 dependencies:
-    - python
+    - python=3.8
     - matplotlib
     - xarray
     - pandas
@@ -13,6 +13,9 @@ dependencies:
     - cartopy
     - pygrib 
     - pip
-        - tensorflow
-        - netcdf4
+    - cudnn=7.6
+    - cudatoolkit=10.1
+    - netcdf4
+    - pip:
+        - tensorflow-gpu==2.3
         - git+https://github.com/yingkaisha/keras-unet-collection.git
